fix blog roll item text overflow bug

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -121,6 +121,8 @@ $menu-label-color: $white-ter
 .blog-list-item .featured-thumbnail
   flex-basis: 35%;
   margin: 0 1.5em 0 0;
+.blog-list-item p
+  word-break: break-word;
 
 
 @import "~bulma"
